Issue #1132818 by mikeker: Allows more specific targeting of BEF options based on filter options
Issue #1162488 by klickreflex: Fixes incorrect HTML in nested displays
By mikeker: Added datepicker option
Issue #1194102 by dj1999: Adds BEF options to 'is all of' filters
Issue #1149254 by aaronbauman: Hides Apply button when exposed filters are set to hidden
Issue #1227168 by gionnibgud: Adds IDs to select_as_links filter options
Issue #1260194 by zhuber: Adds toggle functionality to filter links
Issue #1099528 by Murz: Fixes incorrect depth of '- Any -' option
Issue #1241960 by mikeker: Fixes E_STRICT warning
Issue #1217204 by mikeker: Fixes Undefined index errors when BEF settings page is raised as a standalong page
Issue #1281348 by mikeker: form.js and collapse.js not being aggregated properly
Issue #1272694 by samhassell and mikeker: correctly sets form-item classes for wrapper divs
Issue #1290630 by d.clarke: Removes duplicated IDs from radio buttons
Issue #1289370 by mikeker: Gets Datepicker working again. Note: needs to be added to behaviors.


Better Exposed Filters 6.x-x.x  xxxx-xx-xx
------------------------------------------
#864614 by OxideInteractive: Fixes extra space in class attributes
#874978 by vosechu: select_as_checkboxes now respects #default_value
#812778 by mikeker: Fixes problem with "Show hierarchy in dropdown enabled"
#811954 by pivica: Fixes duplicate Select All/None links with multiple Behavior executions
#657148 by mikeker: Adds support for exposed sort manipulation
#965388 by mikeker: Adds support for collapsible fieldsets
#965388 by mikeker: Adds support for collapsible fieldsets
mikeker: Adds nested list display for hierarchical taxonomy filters
#894312 by kenorb, mikeker: Adds links as a BEF option
#1006716 by attiks: Corrects <label>/<input> tag order

Better Exposed Filters 6.x-1.0  2010-05-25
------------------------------------------
Initial release.  Supports Views 2.x and 3.x.